@@ -34,9 +34,13 @@ Changes in version 0.2.0.1-alpha - 2007-??-??
 
   o Minor bugfixes:
     - Stop allowing hibernating servers to be "stable" or "fast".
+
+  o Minor bugfixes (controller), reported by daejees:
     - Make 'getinfo fingerprint' return a 551 error if we're not a
-      server, so we match what the control spec claims we do. Reported
-      by daejees.
+      server, so we match what the control spec claims we do.
+    - Fix a typo in an error message when extendcircuit fails that
+      caused us to not follow the \r\n-based delimiter protocol.
+    - Make the response to 'getinfo addr-mappings/*' follow the spec.
 
 
 Changes in version 0.1.2.10-rc - 2007-03-07
